--- a/mqwebsite/static/stylesheets/custom/components/banner.import.less
+++ b/mqwebsite/static/stylesheets/custom/components/banner.import.less
@@ -3,7 +3,7 @@
     background-color: @accent-color;
 }
 .banner-image {
-    background-image: url('/static/img/landing/Atlanta_Cityscape.jpg');
+    background-image: url('{{ url_for('static', filename='/static/img/landing/Atlanta_Cityscape.jpg') }}');
     background-attachment: fixed;
     background-position: center top;
 }
