Removing *.pyc files from the repo.  Finally working wow animations.  Not entirely sure what was wrong but this works.  Now to figure out how to send an email then the site rework is done

--- a/mqwebsite/static/stylesheets/custom/components/banner.import.less
+++ b/mqwebsite/static/stylesheets/custom/components/banner.import.less
@@ -3,7 +3,7 @@
     background-color: @accent-color;
 }
 .banner-image {
-    background-image: url('{{ url_for('static', filename='/static/img/landing/Atlanta_Cityscape.jpg') }}');
+    background-image: url(/img/landing/Atlanta_Cityscape.jpg);
     background-attachment: fixed;
     background-position: center top;
 }
